--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
         <img id="beach">
 
         <div class="info">
+            <h1 id="time"></h1>
+            <h2 id="date"></h2>
             <p id="description"></p>
         </div>
     </section>
